Added account photo upload and get
